# CMP6228

./: .gitignore  Using Google Colab.txt
Assignments/LaTeX/: .latexmkrc  Report.bib  Report.tex
Assignments/LaTeX/Body/: ExperimentalResults.tex
Assignments/LaTeX/Proposal/: .latexmkrc  AppendixA.tex  Proposal.bib  Proposal.tex
Assignments/LaTeX/Report/: Report.tex
Assignments/LaTeX/Report/Body/: AppendixA.tex  ExperimentalResults.tex  Method.tex  Notes.tex
Labs/: Lab1.ipynb  Lab2-1.ipynb  Lab2.ipynb  Lab3-Local.ipynb  pyproject.toml
Labs/Local/: GPUTesting.ipynb  GPUvsCPU.ipynb  GPUvsCPUAlt.ipynb  Lab3.ipynb  Lab4-Local.ipynb  Lab4.ipynb  Lab5-2.ipynb  Lab5.ipynb  Lab6.ipynb
Labs/Local/.devcontainer/: RENAME-devcontainer.json  devcontainer.json
Labs/Local/Lab 7/: Lab7-4.ipynb  Lab7.ipynb  Lab7_2.ipynb  Lab7_3.ipynb
Labs/Local/Lab 8/: CIFAR10-9070XT.ipynb  CIFAR10.ipynb  PredictCustomImages.ipynb  VGG16-FromScratch.ipynb
Labs/Local/Lab 9/: Autoencoders.ipynb  Denoising.ipynb
Labs/Local/Testing/: ! Also see Lab 8.txt  GPUvsCPU-3060Ti.ipynb  GPUvsCPU-9070XT.ipynb  MNIST.ipynb
Labs/Notes/: Lab2.txt
Labs/Old/: Lab1.ipynb  Lab3.ipynb
